img overlap fix

--- a/src/general.css
+++ b/src/general.css
@@ -106,7 +106,7 @@ ul {
     text-decoration: none;
     display: inline-block;
     width: 30%;
-    height: 110px;
+    height: 105px;
     border-top: 5px solid black;
     border-right: 5px solid black;
     border-radius: 10px;
